--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "test_adaptive_marko",
+  "homepage": "https://github.com/Wacorasu/test_adaptive_marko",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
