--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test_adaptive_marko",
-  "homepage": "https://github.com/Wacorasu/test_adaptive_marko",
+  "homepage": "https://wacorasu.github.com/test_adaptive_marko",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
